; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_planobject.c_PLy_plan_status.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_planobject.c_PLy_plan_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c":status\00", align 1
@Py_True = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @PLy_plan_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @PLy_plan_status(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = call i64 @PyArg_ParseTuple(i32* %6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32*, i32** @Py_True, align 8
  %11 = call i32 @Py_INCREF(i32* %10)
  %12 = load i32*, i32** @Py_True, align 8
  store i32* %12, i32** %3, align 8
  br label %14

13:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i32*, i32** %3, align 8
  ret i32* %15
}

declare dso_local i64 @PyArg_ParseTuple(i32*, i8*) #1

declare dso_local i32 @Py_INCREF(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
